fixed missing background image

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Fugaz+One);
 body{
     color:#444;
-    background: url('../images/assets/bg-c.jpg') no-repeat top right;
+    background: url('../images/bg-c.jpg') no-repeat top right;
     background-size: 100%;
     background-color: #000;
     background-attachment: fixed;
